--- a/src/posts/published/how-to-add-algolia-search-to-a-gatsby-blog/index.mdx
+++ b/src/posts/published/how-to-add-algolia-search-to-a-gatsby-blog/index.mdx
@@ -8,6 +8,10 @@ relatedPostsSlugs:
   ['why-i-rewrote-my-blog-with-gatsby', 'firebase-and-gatsby-together-at-last']
 ---
 
+**Update**: In the time since writing this post, I have removed the search feature for my blog. Simply put, it was difficult to keep the number of searches below the free tier threshold every month. Instead, I now have a page with all posts that I'm working on developing filtering and search for. Thanks.
+
+---
+
 This weekend I shipped a new feature for my blog--search! Just have a look up and to the right. You should see it up there.
 
 Adding search was easier than I expected. I had almost no understanding of the work involved in making this happen, but between the Algolia service, their `react-instantsearch` library, and a little help from Twitter, this was pretty simple to do. This post will walk you through all the steps it took to make that happen.
