adds excerpt to set theory

--- a/src/posts/published/set-theory/index.mdx
+++ b/src/posts/published/set-theory/index.mdx
@@ -4,7 +4,7 @@ slug: 'set-theory'
 title: 'Set Theory'
 subtitle: 'A Primer'
 description: 'Learn the fundamentals of Sets and how understanding them may benefit you as a software engineer and programmer.'
-excerpt: null
+excerpt: "I find Sets and set theory to be a fascinating concept, and one that I find more and more useful as time goes on. I've wanted to write an introductory post on the topic for a while now and hope it might inspire a similar interest in Sets for you."
 tags: ['JavaScript', 'Computer Science']
 relatedPostsSlugs: []
 ---
