rename var to make more consistent in post

--- a/src/posts/published/set-theory/index.mdx
+++ b/src/posts/published/set-theory/index.mdx
@@ -152,7 +152,7 @@ Set A is a superset of Set B if Set B is a subset of Set A.
 
 ```javascript
 function superset(setA, setB) {
-  return [...setB].every(item => setA.has(item))
+  return [...setB].every(element => setA.has(element))
 }
 ```
 
